uncomment code to use firebase data. prevent project description and link from overflowing out of card

--- a/src/App.scss
+++ b/src/App.scss
@@ -194,3 +194,7 @@
     margin-top: 20px;
     text-align: end;
   }
+
+.removeOverflowText {
+  overflow-wrap: break-word;
+}
